proj1/tests/other-tests/oskis-angels_tests/regexperts_tests/error/cannot_assign_to_None.py
#Test that we cannot use None as a variable name
def foo(x):
	None = 5

foo(5)